tests/paczka1/fuzzy1/24456484.err
Error in line 3: 4GCX0 S812 41,8
Error in line 5: vqwOiuVNX A779 78,5
Error in line 17: kaeZt A271 65,4
Error in line 9: vqwOiuVNX S406 13,9
Error in line 18: kaeZt A779 97,9
Error in line 26: vC7eF A779 -1,1
Error in line 29: 4GCX0 S406 89,8
Error in line 36: kaeZt A271 60,6
